Removed important in banner image

--- a/lms/templates/student_account/login_and_register.html
+++ b/lms/templates/student_account/login_and_register.html
@@ -16,7 +16,7 @@
 <link href="${marketing_link('LOGIN_PAGE_STYLING')}" rel="stylesheet">
 <style>
 .window-wrap {
-	background-image: url("${marketing_link('LOGIN_PAGE_BANNER')}") !important;
+	background-image: url("${marketing_link('LOGIN_PAGE_BANNER')}") ;
 }
 </style>
 </%block>
