--- a/lms/templates/student_account/login_and_register.html
+++ b/lms/templates/student_account/login_and_register.html
@@ -18,6 +18,9 @@
 .window-wrap {
 	background-image: url("${marketing_link('LOGIN_PAGE_BANNER')}") ;
 }
+.submission-error h4.message-title {
+    color: #b91c1c !important;
+}
 </style>
 </%block>
 <%block name="js_extra">
