Revert "refactor: Convert builtin blocks' sass variables to css variables (#3…"
This reverts commit 082350e72a4d62a79634ca87b5f8a2b1d4cf39a8.

--- a/xmodule/assets/video/_accessible_menu.scss
+++ b/xmodule/assets/video/_accessible_menu.scss
@@ -1,12 +1,11 @@
 @import 'base/mixins';
-@import 'lms/theme/variables-v1';
 
 $a11y--gray: rgb(127, 127, 127);
 $a11y--blue: rgb(0, 159, 230);
-$a11y--gray-d1: var(--gray-d1);
-$a11y--gray-l2: var(--gray-l2);
-$a11y--gray-l3: var(--gray-l3);
-$a11y--blue-s1: var(--blue-s1);
+$a11y--gray-d1: shade($gray, 20%);
+$a11y--gray-l2: tint($gray, 40%);
+$a11y--gray-l3: tint($gray, 60%);
+$a11y--blue-s1: saturate($blue, 15%);
 
 %use-font-awesome {
   font-family: FontAwesome;
@@ -33,7 +32,7 @@ $a11y--blue-s1: var(--blue-s1);
     display: none;
     position: absolute;
     list-style: none;
-    background-color: var(--white);
+    background-color: $white;
     border: 1px solid #eee;
 
     li {
@@ -42,7 +41,7 @@ $a11y--blue-s1: var(--blue-s1);
       margin: 0;
       padding: 0;
       border-bottom: 1px solid #eee;
-      color: var(--white);
+      color: $white;
 
       a {
         display: block;
@@ -85,23 +84,23 @@ $a11y--blue-s1: var(--blue-s1);
 
     &.open {
       > a {
-        background-color: var(--action-primary-active-bg);
-        color: var(--very-light-text);
+        background-color: $action-primary-active-bg;
+        color: $very-light-text;
 
         &::after {
-          color: var(--very-light-text);
+          color: $very-light-text;
         }
       }
     }
 
     > a {
-      @include transition(all var(--tmg-f2) ease-in-out 0s);
+      @include transition(all $tmg-f2 ease-in-out 0s);
       @include font-size(12);
 
       display: block;
       border-radius: 0 3px 3px 0;
-      background-color: var(--very-light-text);
-      padding: calc((var(--baseline)*0.75)) calc((var(--baseline)*1.25)) calc((var(--baseline)*0.75)) calc((var(--baseline)*0.75));
+      background-color: $very-light-text;
+      padding: ($baseline*0.75) ($baseline*1.25) ($baseline*0.75) ($baseline*0.75);
       color: $a11y--gray-l2;
       min-width: 1.5em;
       line-height: 14px;
@@ -114,9 +113,9 @@ $a11y--blue-s1: var(--blue-s1);
 
         content: "\f0d7";
         position: absolute;
-        right: calc((var(--baseline)*0.5));
+        right: ($baseline*0.5);
         top: 33%;
-        color: var(--lighter-base-font-color);
+        color: $lighter-base-font-color;
       }
     }
 
@@ -145,7 +144,7 @@ $a11y--blue-s1: var(--blue-s1);
   @extend %ui-depth5;
 
   border: 1px solid #333;
-  background: var(--white);
+  background: $white;
   color: #333;
   padding: 0;
   margin: 0;
@@ -163,8 +162,8 @@ $a11y--blue-s1: var(--blue-s1);
 
   .menu-item,
   .submenu-item {
-    border-top: 1px solid var(--gray-l3);
-    padding: calc((var(--baseline)/4)) calc((var(--baseline)/2));
+    border-top: 1px solid $gray-l3;
+    padding: ($baseline/4) ($baseline/2);
     outline: none;
 
     & > span {
@@ -177,17 +176,17 @@ $a11y--blue-s1: var(--blue-s1);
 
     &:focus {
       background: #333;
-      color: var(--white);
+      color: $white;
 
       & > span {
-        color: var(--white);
+        color: $white;
       }
     }
   }
 
   .submenu-item {
     position: relative;
-    padding: calc((var(--baseline)/4)) var(--baseline) calc((var(--baseline)/4)) calc((var(--baseline)/2));
+    padding: ($baseline/4) $baseline ($baseline/4) ($baseline/2);
 
     &::after {
       content: '\25B6';
@@ -203,10 +202,10 @@ $a11y--blue-s1: var(--blue-s1);
 
     &.is-opened {
       background: #333;
-      color: var(--white);
+      color: $white;
 
       & > span {
-        color: var(--white);
+        color: $white;
       }
 
       & > .submenu {
@@ -221,7 +220,7 @@ $a11y--blue-s1: var(--blue-s1);
 
   .is-disabled {
     pointer-events: none;
-    color: var(--gray-l3);
+    color: $gray-l3;
   }
 }
 
