--- a/xmodule/assets/html/_display.scss
+++ b/xmodule/assets/html/_display.scss
@@ -10,8 +10,8 @@
 }
 
 h1 {
-  color: var(--body-color);
-  font: normal 2em/1.4em var(--font-family-sans-serif);
+  color: $body-color;
+  font: normal 2em/1.4em $font-family-sans-serif;
   letter-spacing: 1px;
 
   @include margin(0, 0, 1.416em, 0);
@@ -19,9 +19,9 @@ h1 {
 
 h2 {
   color: #646464;
-  font: normal 1.2em/1.2em var(--font-family-sans-serif);
+  font: normal 1.2em/1.2em $font-family-sans-serif;
   letter-spacing: 1px;
-  margin-bottom: calc((var(--baseline)*0.75));
+  margin-bottom: ($baseline*0.75);
   -webkit-font-smoothing: antialiased;
 }
 
@@ -29,7 +29,7 @@ h3,
 h4,
 h5,
 h6 {
-  @include margin(0, 0, calc((var(--baseline)/2)), 0);
+  @include margin(0, 0, ($baseline/2), 0);
 
   font-weight: 600;
 }
@@ -54,7 +54,7 @@ p {
   margin-bottom: 1.416em;
   font-size: 1em;
   line-height: 1.6em !important;
-  color: var(--body-color);
+  color: $body-color;
 }
 
 em,
@@ -78,11 +78,11 @@ b {
 p + p,
 ul + p,
 ol + p {
-  margin-top: var(--baseline);
+  margin-top: $baseline;
 }
 
 blockquote {
-  margin: 1em calc((var(--baseline)*2));
+  margin: 1em ($baseline*2);
 }
 
 ol,
@@ -91,7 +91,7 @@ ul {
   @include bi-app-compact(padding, 0, 0, 0, 1em);
 
   margin: 1em 0;
-  color: var(--body-color);
+  color: $body-color;
 
   li {
     margin-bottom: 0.708em;
@@ -112,7 +112,7 @@ a {
   &:hover,
   &:active,
   &:focus {
-    color: var(--blue);
+    color: $blue;
   }
 }
 
@@ -122,7 +122,7 @@ img {
 
 pre {
   margin: 1em 0;
-  color: var(--body-color);
+  color: $body-color;
   font-family: monospace, serif;
   font-size: 1em;
   white-space: pre-wrap;
@@ -130,7 +130,7 @@ pre {
 }
 
 code {
-  color: var(--body-color);
+  color: $body-color;
   font-family: monospace, serif;
   background: none;
   padding: 0;
@@ -138,15 +138,15 @@ code {
 
 table {
   width: 100%;
-  margin: var(--baseline) 0;
+  margin: $baseline 0;
   border-collapse: collapse;
   font-size: 16px;
 
   td,
   th {
-    margin: var(--baseline) 0;
-    padding: calc((var(--baseline)/2));
-    border: 1px solid var(--gray-l3);
+    margin: $baseline 0;
+    padding: ($baseline/2);
+    border: 1px solid $gray-l3;
     font-size: 14px;
 
     &.cont-justified-left {
@@ -179,12 +179,12 @@ th {
 
     position: absolute;
     display: block;
-    padding: calc((var(--baseline)/4)) 7px;
+    padding: ($baseline/4) 7px;
     border-radius: 5px;
     opacity: 0.9;
-    background: var(--white);
-    color: var(--black);
-    border: 2px solid var(--black);
+    background: $white;
+    color: $black;
+    border: 2px solid $black;
 
     .label {
       font-weight: bold;
@@ -269,11 +269,11 @@ th {
             position: relative;
 
             &.action-zoom-in {
-              margin-right: calc((var(--baseline)/4));
+              margin-right: ($baseline/4);
             }
 
             &.action-zoom-out {
-              margin-left: calc((var(--baseline)/4));
+              margin-left: ($baseline/4);
             }
 
             &.is-disabled {
