--- a/xmodule/assets/tabs/_tabs.scss
+++ b/xmodule/assets/tabs/_tabs.scss
@@ -31,12 +31,12 @@
   .edit-header {
     box-sizing: border-box;
 
-    padding: 18px var(--baseline);
+    padding: 18px $baseline;
     top: 0 !important; // ugly override for second level tab override
     right: 0;
-    background-color: var(--blue);
-    border-bottom: 1px solid var(--blue-d2);
-    color: var(--white);
+    background-color: $blue;
+    border-bottom: 1px solid $blue-d2;
+    color: $white;
 
     //Component Name
     .component-name {
@@ -44,16 +44,16 @@
       top: 0;
       left: 0;
       width: 50%;
-      color: var(--white);
+      color: $white;
       font-weight: 600;
 
 
 
       em {
         display: inline-block;
-        margin-right: calc((var(--baseline)/4));
+        margin-right: ($baseline/4);
         font-weight: 400;
-        color: var(--white);
+        color: $white;
       }
     }
 
@@ -61,9 +61,9 @@
     .editor-tabs {
       list-style: none;
       right: 0;
-      top: calc((var(--baseline)/4));
+      top: ($baseline/4);
       position: absolute;
-      padding: 12px calc((var(--baseline)*0.75));
+      padding: 12px ($baseline*0.75);
 
       .inner_tab_wrap {
         display: inline-block;
@@ -73,25 +73,25 @@
           @include font-size(14);
           @include linear-gradient(top, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0));
 
-          border: 1px solid var(--blue-d1);
+          border: 1px solid $blue-d1;
           border-radius: 3px;
-          padding: calc((var(--baseline)/4)) (var(--baseline));
-          background-color: var(--blue);
+          padding: ($baseline/4) ($baseline);
+          background-color: $blue;
           font-weight: bold;
-          color: var(--white);
+          color: $white;
 
           &.current {
-            @include linear-gradient(var(--blue), var(--blue));
+            @include linear-gradient($blue, $blue);
 
-            color: var(--blue-d1);
-            box-shadow: inset 0 1px 2px 1px var(--shadow-l1);
-            background-color: var(--blue-d4);
+            color: $blue-d1;
+            box-shadow: inset 0 1px 2px 1px $shadow-l1;
+            background-color: $blue-d4;
             cursor: default;
           }
 
           &:hover,
           &:focus {
-            box-shadow: inset 0 1px 2px 1px  var(--shadow);
+            box-shadow: inset 0 1px 2px 1px  $shadow;
             background-image: linear-gradient(#009fe6, #009fe6) !important;
           }
         }
@@ -113,7 +113,7 @@
     .comp-subtitles-import-list {
       > li {
         display: block;
-        margin: calc(var(--baseline)/2) 0;
+        margin: $baseline/2 0;
       }
 
       .blue-button {
@@ -128,7 +128,7 @@
 }
 
 .component-tab {
-  background: var(--white);
+  background: $white;
   position: relative;
   border-top: 1px solid #8891a1;
 
