Update user_tracker_link.html Added favicon

--- a/lms/templates/user_tracker_link.html
+++ b/lms/templates/user_tracker_link.html
@@ -6,6 +6,7 @@
 <link href="https://static.talentsprint.com/extras/table_template/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css" rel="stylesheet">
 <link href="https://cdn.datatables.net/1.13.6/css/dataTables.jqueryui.min.css" rel="stylesheet">
+<link rel="icon" type="image/x-icon" href="https://static.talentsprint.com/favicon.ico"/>
 <link href="https://cdn.datatables.net/scroller/2.2.0/css/scroller.jqueryui.min.css" rel="stylesheet">
 <style>
 table.dataTable>thead>tr>th{background-color:#0075bb;color: white;}
