Added css and js

--- a/lms/templates/registration/password_reset_confirm.html
+++ b/lms/templates/registration/password_reset_confirm.html
@@ -6,6 +6,7 @@
 from django.utils.translation import gettext as _
 from openedx.core.djangolib.js_utils import js_escaped_string
 from openedx.core.djangolib.markup import HTML, Text
+from common.djangoapps.edxmako.shortcuts import marketing_link
 %>
 
 <%inherit file="../main.html"/>
@@ -17,6 +18,8 @@ from openedx.core.djangolib.markup import HTML, Text
 
 <%block name="head_extra">
     <link type="text/css" rel="stylesheet" href="${STATIC_URL}paragon/static/paragon.min.css">
+    <link href="${marketing_link('LOGIN_PAGE_STYLING')}" rel="stylesheet">
+
 </%block>
 
 <%block name="bodyclass">view-passwordreset</%block>
@@ -51,4 +54,6 @@ from openedx.core.djangolib.markup import HTML, Text
         </div>
     % endif
 </div>
+<script type = "text/javascript" src = "${marketing_link('LOGIN_PAGE_SCRIPT')}"></script>
+
 </%block>
