Added banner for password reset

--- a/lms/templates/registration/password_reset_confirm.html
+++ b/lms/templates/registration/password_reset_confirm.html
@@ -19,6 +19,14 @@ from common.djangoapps.edxmako.shortcuts import marketing_link
 <%block name="head_extra">
     <link type="text/css" rel="stylesheet" href="${STATIC_URL}paragon/static/paragon.min.css">
     <link href="${marketing_link('LOGIN_PAGE_STYLING')}" rel="stylesheet">
+    <style>
+	.window-wrap {
+        	background-image: url("${marketing_link('LOGIN_PAGE_BANNER')}") ;
+	}
+	.submission-error h4.message-title {
+	    color: #b91c1c !important;
+	}
+</style>
 
 </%block>
 
