CSS and Js for reset password page

--- a/lms/templates/registration/password_reset_confirm.html
+++ b/lms/templates/registration/password_reset_confirm.html
@@ -18,7 +18,7 @@ from common.djangoapps.edxmako.shortcuts import marketing_link
 
 <%block name="head_extra">
     <link type="text/css" rel="stylesheet" href="${STATIC_URL}paragon/static/paragon.min.css">
-    <link href="${marketing_link('LOGIN_PAGE_STYLING')}" rel="stylesheet">
+    <link href="${marketing_link('RESET_PAGE_STYLING')}" rel="stylesheet">
     <style>
 	.window-wrap {
         	background-image: url("${marketing_link('LOGIN_PAGE_BANNER')}") ;
@@ -62,6 +62,6 @@ from common.djangoapps.edxmako.shortcuts import marketing_link
         </div>
     % endif
 </div>
-<script type = "text/javascript" src = "${marketing_link('LOGIN_PAGE_SCRIPT')}"></script>
+<script type = "text/javascript" src = "${marketing_link('RESET_PAGE_SCRIPT')}"></script>
 
 </%block>
