feat: implement accept and ignore buttons

--- a/cms/static/sass/views/_container.scss
+++ b/cms/static/sass/views/_container.scss
@@ -571,6 +571,7 @@
     & > iframe {
       width: 100%;
       min-height: 350px;
+      background: url('#{$static-path}/images/spinner.gif') center center no-repeat;
     }
   }
 }
