--- a/lms/templates/video.html
+++ b/lms/templates/video.html
@@ -123,7 +123,7 @@ from openedx.core.djangolib.js_utils import (
                 % endif
             </div>
         % endif
-        % if track:
+        % if track and showTranscriptDownload:
         <div class="wrapper-download-transcripts">
             <h4 class="hd hd-5">${_('Transcripts')}</h4>
             % if transcript_download_format:
