--- a/openedx/features/course_bookmarks/templates/course_bookmarks/course-bookmarks.html
+++ b/openedx/features/course_bookmarks/templates/course_bookmarks/course-bookmarks.html
@@ -36,6 +36,9 @@ ${HTML(bookmarks_fragment.foot_html())}
 </%block>
 
 <%block name="content">
+<head>
+    <link rel="stylesheet" href="https://static.talentsprint.com/edx_styles/bookmark_styles.css">
+</head>
 <div class="course-view page-content-container" id="course-container">
     <header class="page-header has-secondary">
         ## Breadcrumb navigation
