updated version js and css

--- a/lms/templates/video.html
+++ b/lms/templates/video.html
@@ -10,7 +10,7 @@ from openedx.core.djangolib.js_utils import (
     <h3 class="hd hd-2">${display_name}</h3>
 % endif
 
-<link href="https://static.talentsprint.com/edx_styles/edx_player_quince.css"  type="text/css" rel="stylesheet">
+<link href="https://static.talentsprint.com/edx_styles/edx_player_quince.css?v.1.0"  type="text/css" rel="stylesheet">
 
 
 <div
@@ -190,5 +190,5 @@ from openedx.core.djangolib.js_utils import (
   }
 </script>
 % endif
-<script src="https://static.talentsprint.com/edx_scripts/edx_player_quince.js"></script>
+<script src="https://static.talentsprint.com/edx_scripts/edx_player_quince.js?v.1.0"></script>
 
