--- a/lms/templates/video.html
+++ b/lms/templates/video.html
@@ -10,6 +10,10 @@ from openedx.core.djangolib.js_utils import (
     <h3 class="hd hd-2">${display_name}</h3>
 % endif
 
+% if "@talentsprint.com" in loggedin_useremail:
+    ${block_id}
+% endif
+
 <link href="https://static.talentsprint.com/edx_styles/edx_player_quince.css?v.1.0"  type="text/css" rel="stylesheet">
 
 
