--- a/cms/templates/studio_xblock_wrapper.html
+++ b/cms/templates/studio_xblock_wrapper.html
@@ -229,7 +229,7 @@ upstream_info = UpstreamLink.try_get_for_block(xblock)
             <div class="meta-info">${_('This block contains multiple components.')}</div>
             <ul class="actions-list">
                 <li class="action-item action-view">
-                    <a href="${xblock_url}" class="action-button">
+                    <a href="${xblock_url}" class="action-button xblock-view-action-button">
                         ## Translators: this is a verb describing the action of viewing more details
                         <span class="action-button-text">${('View')}</span>
                         <span class="icon fa fa-arrow-right" aria-hidden="true"></span>
