refactor: added some styles

--- a/cms/static/sass/course-unit-mfe-iframe-bundle.scss
+++ b/cms/static/sass/course-unit-mfe-iframe-bundle.scss
@@ -173,6 +173,7 @@ body {
 
   .edit-xblock-modal select {
     background-color: $white;
+    width: 100%;
   }
 
   &.wrapper-modal-window .modal-window .modal-actions a {
