--- a/cms/templates/container_editor.html
+++ b/cms/templates/container_editor.html
@@ -82,8 +82,9 @@ from openedx.core.release import RELEASE_LINE
             <link rel="stylesheet" type="text/css" href="${static.url('common/css/vendor/editImageModal.min.css')}" />
         % endif
         <link rel="stylesheet" type="text/css" href="${static.url('js/vendor/timepicker/jquery.timepicker.css')}" />
-        <link rel="stylesheet" type="text/css" href="http://local.edly.io:8000/static/dist/openassessment-ltr.57031c2cf8d1638b07a0.css" />
-    </%block>
+        {% comment %} TODO: Confirm if we can retrieve static files from the backend {% endcomment %}
+        <link rel="stylesheet" type="text/css" href="${static.url('dist/openassessment-ltr.57031c2cf8d1638b07a0.css')}" />
+        </%block>
 
     <!-- Hotjar Tracking Code -->
     <script>
