--- a/lms/static/sass/base/_build.scss
+++ b/lms/static/sass/base/_build.scss
@@ -1,5 +1,9 @@
 // LMS common build
 
+@mixin background-variant($color, $opacity: 1) {
+    background-color: rgba($color, $opacity);
+  }
+
 // Theme-specific variables
 @import 'lms/theme/variables';
 
@@ -7,7 +11,6 @@
 @import 'bootstrap/variables';
 @import 'bootstrap/scss/functions';
 @import 'bootstrap/scss/variables';
-@import 'bootstrap/scss/mixins/background-variant';
 @import 'bootstrap/scss/mixins/box-shadow';
 @import 'bootstrap/scss/mixins/breakpoints';
 @import 'bootstrap/scss/mixins/float';
