feat: [FC-0070] add events and style for rendering Split xblock in chromeless template

--- a/cms/static/sass/course-unit-mfe-iframe-bundle.scss
+++ b/cms/static/sass/course-unit-mfe-iframe-bundle.scss
@@ -8,6 +8,11 @@ html {
   }
 }
 
+body,
+#main {
+    background-color: transparent;
+}
+
 [class*="view-"] .wrapper {
   .inner-wrapper {
     max-width: 100%;
@@ -39,67 +44,105 @@ html {
 
       .actions-list .action-item .action-button {
         border-radius: 4px;
+        display: inline-flex;
+        align-items: center;
+        gap: 0.6rem;
+        padding: 0.3rem 1rem;
 
         &:hover {
           background-color: $primary;
           color: $white;
         }
-      }
-    }
 
-    &.level-page .xblock-message {
-      padding: ($baseline * .75) ($baseline * 1.2);
-      border-radius: 0 0 4px 4px;
-
-      &.information {
-        color: $text-color;
-        background-color: $xblock-message-info-bg;
-        border-color: $xblock-message-info-border-color;
-      }
-
-      &.validation.has-warnings {
-        color: $black;
-        background-color: $xblock-message-warning-bg;
-        border-color: $xblock-message-warning-border-color;
-        border-top-width: 1px;
-
-        .icon {
-          color: $xblock-message-warning-border-color;
+        .action-button-text {
+          line-height: 2rem;
         }
       }
-
-      a {
-        color: $primary;
-      }
     }
 
-    .xblock-author_view-library_content > .wrapper-xblock-message .xblock-message {
-      font-size: 16px;
-      line-height: 22px;
-      border-radius: 4px;
-      padding: ($baseline * 1.2);
-      box-shadow: 0 1px 2px rgba(0, 0, 0, .15), 0 1px 4px rgba(0, 0, 0, .15);
-      margin-bottom: ($baseline * 1.4);
+    &.level-page {
+        .xblock-message {
+            padding: ($baseline * .75) ($baseline * 1.2);
+            border-radius: 0 0 4px 4px;
+
+            .xblock-message-list {
+                color: $black;
+            }
+
+            &.information,
+            &.validation.has-warnings,
+            &.validation.has-errors {
+                color: $black;
+                border-width: 0;
+                font-size: 16px;
+                line-height: 22px;
+                padding: ($baseline * 1.2);
+                box-shadow: 0 1px 2px rgba(0, 0, 0, .15), 0 1px 4px rgba(0, 0, 0, .15);
+            }
+
+            &.information {
+                background-color: $xblock-message-info-bg;
+
+                .icon {
+                    color: $xblock-message-info-icon-color;
+                }
+            }
+
+            &.validation.has-warnings {
+                background-color: $xblock-message-warning-bg;
+
+                .icon {
+                    color: $xblock-message-warning-icon-color;
+                }
+            }
+
+            &.validation.has-errors {
+                background-color: $xblock-message-error-bg;
+
+                .icon {
+                    color: $xblock-message-error-icon-color;
+                }
+            }
+
+            a {
+                color: $primary;
+            }
+        }
+
+        &.studio-xblock-wrapper > .wrapper-xblock-message .xblock-message,
+        .xblock > .wrapper-xblock-message .xblock-message {
+            border-radius: 4px;
+            margin-bottom: ($baseline * 1.4);
+        }
+    }
+
+    .xblock-author_view-split_test .wrapper-xblock {
+      background: $white;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, .15), 0 2px 8px rgba(0, 0, 0, .15);
     }
 
     &.level-element {
       box-shadow: 0 2px 4px rgba(0, 0, 0, .15), 0 2px 8px rgba(0, 0, 0, .15);
       margin: 0 0 ($baseline * 1.4) 0;
-    }
 
-    &.level-element .xblock-header-primary {
-      background-color: $white;
-    }
+        .xblock-header-primary {
+            background-color: $white;
+        }
 
-    &.level-element .xblock-render {
-      background: $white;
-      margin: 0;
-      padding: $baseline;
-      border-bottom-left-radius: 6px;
-      border-bottom-right-radius: 6px;
+        .xblock-render {
+            background: $white;
+            margin: 0;
+            padding: $baseline;
+            border-bottom-left-radius: 6px;
+            border-bottom-right-radius: 6px;
+        }
     }
 
     .wrapper-xblock .header-actions .actions-list {
+      .wrapper-nav-sub {
+        z-index: 11;
+      }
+
       .action-actions-menu:last-of-type .nav-sub {
         right: 120px;
       }
@@ -175,6 +218,13 @@ html {
           margin-bottom: 0;
         }
       }
+    }
+
+    .wrapper-groups.is-inactive {
+        box-shadow: 0 2px 4px rgba(0, 0, 0, .15), 0 2px 8px rgba(0, 0, 0, .15);
+        border-radius: 6px;
+        border: none;
+        margin: 3rem 1rem 0;
     }
   }
 
@@ -856,5 +906,114 @@ select {
   .feedback-tab input:not([type=checkbox]),
   .xblock--drag-and-drop--editor .feedback-tab select {
     width: 100%;
+  }
+}
+
+.xblock-render .add-xblock-component {
+  background: transparent;
+  padding: $baseline;
+
+  .new-component {
+    h5 {
+      margin-bottom: ($baseline * 1.2);
+      font-size: 22px;
+      font-weight: 700;
+      color: $black;
+    }
+
+    .new-component-type {
+      display: flex;
+      flex-wrap: wrap;
+      gap: ($baseline * .6);
+      align-items: center;
+      justify-content: center;
+
+      .add-xblock-component-button {
+        box-shadow: 0 1px 2px rgba(0, 0, 0, .15), 0 1px 4px rgba(0, 0, 0, .15);
+        width: 17.6rem;
+        height: 11rem;
+        color: $primary;
+        border-color: $primary;
+        background: transparent;
+        margin: 0;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: ($baseline * .4);
+
+        &:hover {
+          color: darken($primary, 10%);
+          background-color: lighten($primary, 80%);
+          border-color: darken($primary, 15%);
+        }
+
+        .large-template-icon {
+          width: 24px;
+          height: 24px;
+          background: $primary;
+
+          @each $name, $file in $template-icon-map {
+            &.large-#{$name}-icon {
+              mask: url("#{$static-path}/images/#{$file}.svg") center no-repeat;
+            }
+          }
+        }
+
+        .name {
+          color: inherit;
+          font-size: 1.575rem;
+          font-weight: 400;
+        }
+
+        .beta {
+          color: $white;
+          background-color: $primary;
+          padding: 0.2rem 0.8rem 0.4rem;
+          font-size: 1.35rem;
+          font-weight: 700;
+          line-height: 1;
+          margin: -0.6rem 0 0;
+        }
+      }
+    }
+  }
+}
+
+.paste-component {
+  margin: 2.4rem 1rem 0;
+
+  .paste-component-whats-in-clipboard .clipboard-details-popup {
+    right: -1rem;
+  }
+
+  .paste-component-button.button {
+    padding: 9px 16px;
+    color: $primary;
+    border-color: $primary;
+    font-size: 1.8rem;
+    line-height: 1.33;
+    text-shadow: none;
+    font-weight: 400;
+    position: relative;
+
+    &:focus {
+      color: $primary;
+      background: transparent;
+
+      &:before {
+        content: "";
+        position: absolute;
+        inset: -5px;
+        border: 2px solid $primary;
+        border-radius: 1rem;
+      }
+    }
+
+    &:hover {
+      color: darken($primary, 10%);
+      background-color: lighten($primary, 80%);
+      border-color: darken($primary, 15%);
+    }
   }
 }
