--- a/lms/templates/peerProfile.html
+++ b/lms/templates/peerProfile.html
@@ -184,7 +184,7 @@
       <div class="card-container" style="padding: 0 6rem">
         <div class="row gap" id="row">
           {% for profile in profiles %}
-           {% if not profile.is_superuser or not profile.is_staff %}
+           {% if not profile.is_superuser and not profile.is_staff %}
           <div class="bg-white p-3 colElement" style="cursor: pointer; position: relative; z-index: 10;">
             <div class="profile-section d-flex flex-column flex-lg-row align-items-center flex-wrap flex-lg-nowrap text-center text-lg-left">
               <img class="profile-img" id="profile_image" src="{{ profile.profile_image_urls.full }}" alt="">
