--- a/xmodule/static/css-builtin-blocks/HtmlBlockDisplay.css
+++ b/xmodule/static/css-builtin-blocks/HtmlBlockDisplay.css
@@ -130,18 +130,18 @@
     font-weight: bold;
 }
 
-.xmodule_display.xmodule_AboutBlock p + p,
-.xmodule_display.xmodule_AboutBlock ul + p,
-.xmodule_display.xmodule_AboutBlock ol + p,
-.xmodule_display.xmodule_CourseInfoBlock p + p,
-.xmodule_display.xmodule_CourseInfoBlock ul + p,
-.xmodule_display.xmodule_CourseInfoBlock ol + p,
-.xmodule_display.xmodule_HtmlBlock p + p,
-.xmodule_display.xmodule_HtmlBlock ul + p,
-.xmodule_display.xmodule_HtmlBlock ol + p,
-.xmodule_display.xmodule_StaticTabBlock p + p,
-.xmodule_display.xmodule_StaticTabBlock ul + p,
-.xmodule_display.xmodule_StaticTabBlock ol + p {
+.xmodule_display.xmodule_AboutBlock p+p,
+.xmodule_display.xmodule_AboutBlock ul+p,
+.xmodule_display.xmodule_AboutBlock ol+p,
+.xmodule_display.xmodule_CourseInfoBlock p+p,
+.xmodule_display.xmodule_CourseInfoBlock ul+p,
+.xmodule_display.xmodule_CourseInfoBlock ol+p,
+.xmodule_display.xmodule_HtmlBlock p+p,
+.xmodule_display.xmodule_HtmlBlock ul+p,
+.xmodule_display.xmodule_HtmlBlock ol+p,
+.xmodule_display.xmodule_StaticTabBlock p+p,
+.xmodule_display.xmodule_StaticTabBlock ul+p,
+.xmodule_display.xmodule_StaticTabBlock ol+p {
     margin-top: var(--baseline);
 }
 
@@ -190,7 +190,11 @@
     list-style: disc outside none;
 }
 
-.xmodule_display.xmodule_AboutBlock a:link, .xmodule_display.xmodule_AboutBlock a:visited, .xmodule_display.xmodule_AboutBlock a:hover, .xmodule_display.xmodule_AboutBlock a:active, .xmodule_display.xmodule_AboutBlock a:focus,
+.xmodule_display.xmodule_AboutBlock a:link,
+.xmodule_display.xmodule_AboutBlock a:visited,
+.xmodule_display.xmodule_AboutBlock a:hover,
+.xmodule_display.xmodule_AboutBlock a:active,
+.xmodule_display.xmodule_AboutBlock a:focus,
 .xmodule_display.xmodule_CourseInfoBlock a:link,
 .xmodule_display.xmodule_CourseInfoBlock a:visited,
 .xmodule_display.xmodule_CourseInfoBlock a:hover,
