--- a/xmodule/static/css-builtin-blocks/PollBlockDisplay.css
+++ b/xmodule/static/css-builtin-blocks/PollBlockDisplay.css
@@ -7,7 +7,8 @@
         padding: 0;
     }
 
-    .xmodule_display.xmodule_PollBlock div.poll_question canvas, .xmodule_display.xmodule_PollBlock div.poll_question img {
+    .xmodule_display.xmodule_PollBlock div.poll_question canvas,
+    .xmodule_display.xmodule_PollBlock div.poll_question img {
         page-break-inside: avoid;
     }
 }
