--- a/xmodule/static/css-builtin-blocks/ProblemBlockEditor.css
+++ b/xmodule/static/css-builtin-blocks/ProblemBlockEditor.css
@@ -73,7 +73,8 @@
     height: 21px;
 }
 
-.xmodule_edit.xmodule_ProblemBlock .editor .editor-bar button:hover, .xmodule_edit.xmodule_ProblemBlock .editor .editor-bar button:focus {
+.xmodule_edit.xmodule_ProblemBlock .editor .editor-bar button:hover,
+.xmodule_edit.xmodule_ProblemBlock .editor .editor-bar button:focus {
     background: rgba(255, 255, 255, 0.5);
 }
 
@@ -131,7 +132,8 @@
     cursor: none;
 }
 
-.xmodule_edit.xmodule_ProblemBlock .editor-bar .editor-tabs .advanced-toggle.current:hover, .xmodule_edit.xmodule_ProblemBlock .editor-bar .editor-tabs .advanced-toggle.current:focus {
+.xmodule_edit.xmodule_ProblemBlock .editor-bar .editor-tabs .advanced-toggle.current:hover,
+.xmodule_edit.xmodule_ProblemBlock .editor-bar .editor-tabs .advanced-toggle.current:focus {
     box-shadow: 0 0 0 0 !important;
     background-color: var(--white);
 }
@@ -205,7 +207,7 @@
     background: none;
 }
 
-.xmodule_edit.xmodule_ProblemBlock .problem-editor .markdown-box + .CodeMirror {
+.xmodule_edit.xmodule_ProblemBlock .problem-editor .markdown-box+.CodeMirror {
     padding: 10px;
     width: 69%;
 }
