--- a/xmodule/static/css-builtin-blocks/VideoBlockEditor.css
+++ b/xmodule/static/css-builtin-blocks/VideoBlockEditor.css
@@ -122,7 +122,8 @@
     cursor: default;
 }
 
-.xmodule_edit.xmodule_VideoBlock .editor-with-tabs .edit-header .editor-tabs .inner_tab_wrap a.tab:hover, .xmodule_edit.xmodule_VideoBlock .editor-with-tabs .edit-header .editor-tabs .inner_tab_wrap a.tab:focus {
+.xmodule_edit.xmodule_VideoBlock .editor-with-tabs .edit-header .editor-tabs .inner_tab_wrap a.tab:hover,
+.xmodule_edit.xmodule_VideoBlock .editor-with-tabs .edit-header .editor-tabs .inner_tab_wrap a.tab:focus {
     box-shadow: inset 0 1px 2px 1px var(--shadow);
     background-image: linear-gradient(#009fe6, #009fe6) !important;
 }
@@ -139,7 +140,7 @@
     display: none;
 }
 
-.xmodule_edit.xmodule_VideoBlock .editor-with-tabs .comp-subtitles-entry .comp-subtitles-import-list > li {
+.xmodule_edit.xmodule_VideoBlock .editor-with-tabs .comp-subtitles-entry .comp-subtitles-import-list>li {
     display: block;
     margin: calc(var(--baseline) / 2) 0;
 }
